--- a/index.html
+++ b/index.html
@@ -850,5 +850,60 @@
         // Uncomment to add step buttons
         // addStepButtons();
     </script>
+    <!-- Dark Mode Toggle -->
+<button id="darkToggle" style="
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  padding: 8px 12px;
+  cursor: pointer;
+  border-radius: 6px;
+  border: 1px solid #888;
+  background: #f0f0f0;
+  z-index: 1000;
+">
+  🌙 Dark Mode
+</button>
+
+<style>
+  body.dark-mode {
+    background-color: #121212;
+    color: #e6e6e6;
+  }
+
+  body.dark-mode a {
+    color: #8ab4f8;
+  }
+
+  body.dark-mode pre,
+  body.dark-mode code {
+    background-color: #1e1e1e;
+    color: #dcdcdc;
+  }
+
+  body.dark-mode #darkToggle {
+    background: #333;
+    color: #eee;
+    border-color: #666;
+  }
+</style>
+
+<script>
+  const toggle = document.getElementById("darkToggle");
+
+  if (localStorage.getItem("dark-mode") === "true") {
+    document.body.classList.add("dark-mode");
+    toggle.textContent = "☀️ Light Mode";
+  }
+
+  toggle.addEventListener("click", () => {
+    const enabled = document.body.classList.toggle("dark-mode");
+    localStorage.setItem("dark-mode", enabled);
+
+    toggle.textContent = enabled
+      ? "☀️ Light Mode"
+      : "🌙 Dark Mode";
+  });
+</script>
 </body>
 </html>
